--- a/themes/hugo-tranquilpeak-theme/layouts/partials/footer.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/partials/footer.html
@@ -1,5 +1,15 @@
 <footer id="footer" class="main-content-wrap">
   <span class="copyrights">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="3519539580"></ins>
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     &copy; {{ now.Format "2006" }} {{ with .Site.Params.footer.copyright }}{{ . | safeHTML }}{{ else }}{{ with .Site.Author.name }}{{ . }}{{ else }}{{ with .Site.Title }}{{ . }}{{ end }}{{ end }}{{ end }}. {{ i18n "footer.all_rights_reserved" }}. <a href = "https://gohugo.io/" target="blank">Hugo</a> + <a href = "https://www.netlifycms.org/" target="blank">Netlify CMS</a> = &hearts;
   </span>
 </footer>
