--- a/themes/hugo-tranquilpeak-theme/layouts/partials/footer.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/partials/footer.html
@@ -1,5 +1,25 @@
 <footer id="footer" class="main-content-wrap">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- dot tech links -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="9454392541"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <span class="copyrights">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- dot tech links -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="9454392541"
+     data-ad-format="link"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
      style="display:block; text-align:center;"
