--- a/themes/hugo-tranquilpeak-theme/layouts/partials/post/tag.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/partials/post/tag.html
@@ -1,3 +1,13 @@
 {{ range .Params.tags }}
   <a class="tag tag--primary tag--small" href="{{ $.Site.LanguagePrefix }}/tags/{{ . | urlize }}/">{{ . }}</a>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     <!-- dot tech links -->
+    <ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="9454392541"
+     data-ad-format="link"></ins>
+    <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 {{ end }}
