--- a/themes/hugo-tranquilpeak-theme/layouts/partials/post/header-cover.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/partials/post/header-cover.html
@@ -7,5 +7,15 @@
     {{ if or (eq .Params.covermeta "in") (not .Params.covermeta) }}
       {{ partial "post/header.html" . }}
     {{ end }}
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   <ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="3519539580"></ins>
+  <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+  </script> 
   </div>
 {{ end }}
