--- a/themes/hugo-tranquilpeak-theme/layouts/partials/post/header.html
+++ b/themes/hugo-tranquilpeak-theme/layouts/partials/post/header.html
@@ -11,4 +11,14 @@
     </h1>
   {{ end }}
   {{ partial "post/meta.html" . }}
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   <ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5244482572741917"
+     data-ad-slot="3519539580"></ins>
+   <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
 </div>
